# andromache

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: DockerFile
.github/workflows/: build-test.yaml  skeleton-test.yaml
boot/grub/: grub.cfg
docs/: output.aux  output.out  output.pdfxref  output.stderr  output.stdout  output.toc  report.tex
include/: boot.c  config.h  io.h  string.h
include/boot/: boot.h  head.S  kernel.ld
include/boot/grub/: grub.cfg
include/kernel/: child_handler.h  ipc.h  ipc_message.h  kernel.h  list.h  sched_algos.h  scheduler.h  signal.h  task.h
include/machine/: idt.h  io.h  isr.h
include/modules/: ipc.h  memory.h  scheduler.h  shell.h  signal.h  task.h
include/tty/serial/: serial.c  serial.h
isodir/boot/: kernel.elf
scripts/: build.sh  cleanup.sh  login.exp  login.sh
src/: boot.s  kernel.c  libc.c
src/boot/: boot.s
src/machine/: gdt.c  idt.c  interrupts.s  isr.c  timer.c
src/modules/child_handler/: CMakeLists.txt  child_handler.c
src/modules/child_handler/private/: _child_handler.cpp  _child_handler.h
src/modules/daemon/: daemon.c
src/modules/ipc/: CMakeLists.txt  ipc.c  test_ipc.c
src/modules/ipc/private/: _ipc.h
src/modules/memory/: memory.c
src/modules/sched_algos/: CMakeLists.txt  sched_algos.c
src/modules/sched_algos/private/: _sched_algos.h
src/modules/scheduler/: CMakeLists.txt  scheduler.c
src/modules/scheduler/private/: _scheduler.h
src/modules/shell/: shell.c
src/modules/signal/: CMakeLists.txt  signal.c
src/modules/signal/private/: _signal.h
src/modules/signal_handler/: signal_handler.c
src/modules/task/: task.c
tools/: make_iso.sh  skeleton.py
tools/templates/: CMakeLists.txt.in  module.c.in  private.h.in  public.h.in
